# eb-solys-target-agent

./: CMakeLists.txt  LICENSE  NOTICES  README.md
doc/: TargetAgentGettingStarted.md  TargetAgentHowTo.md
plugins/dbus-monitor-plugin/: CMakeLists.txt
plugins/dbus-monitor-plugin/inc/: dbus-monitor-plugin-message-sender.h  dbus-monitor-plugin.h  dbus_consumer.h  dbus_data_pool.h  dbus_handler.h  dbus_producer.h
plugins/dbus-monitor-plugin/src/: dbus-monitor-plugin.cpp  dbus_consumer.cpp  dbus_data_pool.cpp  dbus_handler.cpp  dbus_producer.cpp
plugins/dbus-monitor-plugin/test/: dbus-monitor-plugin-test.cpp  dbus_monitor_mocks.hpp
plugins/dbusCmdCtrl-plugin/: CMakeLists.txt
plugins/dbusCmdCtrl-plugin/inc/: dbusCmdCtrl_plugin.hpp
plugins/dbusCmdCtrl-plugin/src/: dbusCmdCtrl_plugin.cpp
plugins/dlt-monitor-plugin/: CMakeLists.txt
plugins/dlt-monitor-plugin/inc/: dlt-client-activity.h  dlt-client-message-sender.h  dlt-monitor-plugin.h
plugins/dlt-monitor-plugin/src/: dlt-client-activity.cpp  dlt-monitor-plugin.cpp
plugins/dlt-monitor-plugin/test/: dlt_mocks.hpp  dlt_monitor_plugin_test.cpp
plugins/jsonapi-plugin/: CMakeLists.txt
plugins/jsonapi-plugin/inc/: jsonapiPlugin.hpp
plugins/jsonapi-plugin/src/: jsonapiPlugin.cpp
plugins/linux-app-stats-plugin/: CMakeLists.txt
plugins/linux-app-stats-plugin/inc/: linux_app_stats_plugin.h  periodic_task.hpp  socket_descriptor.hpp  stats_collector.h
plugins/linux-app-stats-plugin/src/: linux_app_stats_plugin.cpp  periodic_task.cpp  socket_descriptor.cpp  stats_collector.cpp
plugins/linux-app-stats-plugin/test/: linux_app_stats_plugin_mocks.hpp  linux_app_stats_plugin_test.cpp  message_sender_mock.hpp
plugins/log4j-plugin/: CMakeLists.txt
plugins/log4j-plugin/inc/: log4jPlugin.hpp  log4jReader.hpp
plugins/log4j-plugin/src/: log4jPlugin.cpp  log4jReader.cpp
plugins/log4j-plugin/test/: log4jReaderMocks.hpp  log4jReaderTest.cpp
plugins/networkPacketSniffer-plugin/: CMakeLists.txt
plugins/networkPacketSniffer-plugin/inc/: networkPacketCollector.hpp  networkPacketSnifferPlugin.hpp
plugins/networkPacketSniffer-plugin/src/: networkPacketCollector.cpp  networkPacketSnifferPlugin.cpp
plugins/networkPacketSniffer-plugin/test/: message_sender_mock.hpp  networkPacketCollectorMocks.hpp  networkPacketCollectorTests.cpp
plugins/resource-monitor-plugin/: CMakeLists.txt
plugins/resource-monitor-plugin/inc/: resource-monitor-plugin.h  resource-monitor-scheduler.h
plugins/resource-monitor-plugin/inc/utils/: procFsReader.h
plugins/resource-monitor-plugin/src/: resource-monitor-plugin.cpp  resource-monitor-scheduler.cpp
plugins/resource-monitor-plugin/src/utils/: procFsReader.cpp  procFsReaderQnx.cpp
plugins/resource-monitor-plugin/test/: message_sender_mock.hpp  procFsReader.h  resource-monitor-plugin-test.cpp  resource_monitor_plugin_mocks.hpp  resource_monitor_plugin_qnx.cpp
plugins/resource-monitor_win7/: CMakeLists.txt
plugins/resource-monitor_win7/inc/: resource-monitor-plugin.h  resource-monitor-scheduler.h  resource-monitor-utils.h
plugins/resource-monitor_win7/src/: resource-monitor-plugin.cpp  resource-monitor-scheduler.cpp  resource-monitor-utils.cpp
plugins/resource-monitor_win7/test/: message_sender_mock.hpp  resource-monitor-plugin-test.cpp  resource_monitor_plugin_mocks.hpp
plugins/socket-reader-plugin/: CMakeLists.txt
plugins/socket-reader-plugin/inc/: socket_reader_activity.h  socket_reader_plugin.h
plugins/socket-reader-plugin/src/: socket_reader_activity.cpp  socket_reader_plugin.cpp
plugins/socket-reader-plugin/test/: socket_reader_mocks.hpp  socket_reader_plugin_test.cpp
target-agent/modules/: CMakeLists.txt  target_agent_main.cpp
target-agent/modules/communicator/: CMakeLists.txt
target-agent/modules/communicator/inc/: CComController.h  CComServer.h  CMessage.h  CMessageDispatcher.h  CommandControlServer.hpp
target-agent/modules/communicator/src/: CComController.cpp  CComServer.cpp  CMessageDispatcher.cpp  CommandControlServer.cpp
target-agent/modules/communicator/test/: CommandControlServerTest.cpp  ProtocolMessageMocks.cpp
target-agent/modules/config-provider/: CMakeLists.txt
target-agent/modules/config-provider/inc/: config_provider.h
target-agent/modules/config-provider/src/: config_provider.cpp
target-agent/modules/logger/: CMakeLists.txt
target-agent/modules/logger/inc/: CConnector.hpp  CLogger.hpp
target-agent/modules/logger/src/: CConnector.cpp  CLogger.cpp
target-agent/modules/logger/test/: acceptor_test.hpp  config_mock.cpp  config_mock.hpp  connector_test.cpp  logger_mock.hpp  logger_test.cpp
target-agent/modules/message-recorder/: CMakeLists.txt
target-agent/modules/message-recorder/inc/: BufferingHandler.hpp  MessageRecorder.hpp  OfflineRecorder.hpp  PathGenerator.hpp  Serializer.hpp
target-agent/modules/message-recorder/src/: BufferingHandler.cpp  MessageRecorder.cpp  OfflineRecorder.cpp  PathGenerator.cpp  Serializer.cpp
target-agent/modules/message-recorder/test/: PathGeneratorTest.cpp  SerializerTest.cpp  config_mock.cpp  dummy_receiver.h  message_recorder_test.cpp  mock_recorder_config_provider.h  test_message_sender_plugin.h
target-agent/modules/plugin-interface/inc/: TargetAgentDispatcherInterface.h  TargetAgentPluginInterface.h  TargetAgentTsProviderInterface.h
target-agent/modules/plugin-provider/: CMakeLists.txt
target-agent/modules/plugin-provider/inc/: CTimestampProvider.h  plugin_notifier.h  plugin_provider.h  protocol_message.h
target-agent/modules/plugin-provider/src/: CTimestampProvider.cpp  plugin_provider.cpp  protocol_message.cpp
target-agent/modules/plugin-provider/test/: CTimestampProviderTests.cpp  protocol_message_test.cpp
target-agent/modules/target-agent-runtime/inc/: CMediator.h
target-agent/modules/target-agent-runtime/src/: CMediator.cpp
utils/: conf.xml  (+3 more)
utils/lib_preload_race/: CMakeLists.txt
utils/lib_preload_race/src/: clock_times.c  clock_times.h  custom_allocs.c  libc_internals.h  main_logic.c  thread_storage.c  thread_storage.h
utils/lib_preload_race/test/: socket_receiver.c
(+14 files in other folders)
